@@ -23,7 +23,7 @@ import java.util.Arrays;
 
 import groovy.lang.*;
 
-public class JavaMockInterceptor implements IProxyBasedMockInterceptor {
+public class JavaMockInterceptor extends BaseMockInterceptor {
   private final IMockConfiguration mockConfiguration;
   private Specification specification;
   private MockController fallbackMockController;
@@ -68,27 +68,9 @@ public class JavaMockInterceptor implements IProxyBasedMockInterceptor {
           return GroovyRuntimeUtil.invokeMethod(target, methodName, GroovyRuntimeUtil.asArgumentArray(args[1]));
         }
       }
-
-      // Another hack It should be replaced with something more reliable: https://github.com/spockframework/spock/issues/1076
       if (isMethod(method, "getProperty", String.class)) {
-        //Groovy 3 started to call go.getProperty("x") method instead of go.getX() directly for go.x
-        Throwable throwable = new Throwable();
-        StackTraceElement mockCaller = throwable.getStackTrace()[3];
-        // In some strange cases the caller classname is `groovy.lang.GroovyObject$getProperty$0` so we must use starts with here
-        if (!(mockCaller.getClassName().startsWith("groovy.lang.GroovyObject$getProperty") && "call".equals(mockCaller.getMethodName()))) {
-          //HACK: Only explicit getter executions (go.foo and go.getFoo()) should be deeper processed.
-          //go.getProperty("foo") is treated as is (to allow for its stubbing)
-          String propertyName = (String)args[0];
-          MetaClass metaClass = ((GroovyObject)target).getMetaClass();
-          String methodName = GroovyRuntimeUtil.propertyToMethodName("get", propertyName);
-          MetaMethod metaMethod = metaClass.getMetaMethod(methodName, GroovyRuntimeUtil.EMPTY_ARGUMENTS);
-          if (metaMethod == null) {
-            MetaMethod booleanVariant = metaClass
-              .getMetaMethod(GroovyRuntimeUtil.propertyToMethodName("is", propertyName), GroovyRuntimeUtil.EMPTY_ARGUMENTS);
-            if (booleanVariant != null && booleanVariant.getReturnType() == boolean.class) {
-              methodName = booleanVariant.getName();
-            }
-          }
+        String methodName = handleGetProperty((GroovyObject)target, args);
+        if (methodName != null) {
           return GroovyRuntimeUtil.invokeMethod(target, methodName);
         }
       }
@@ -100,10 +82,6 @@ public class JavaMockInterceptor implements IProxyBasedMockInterceptor {
       specification.getSpecificationContext().getMockController();
 
     return mockController.handle(invocation);
-  }
-
-  private boolean isMethod(Method method, String name, Class<?>... parameterTypes) {
-    return method.getName().equals(name) && Arrays.equals(method.getParameterTypes(), parameterTypes);
   }
 
   @Override
